# wolper-google

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  wolper-google.skill
tests/: test_auth.py  test_calendar_gmail.py  test_calendar_read.py  test_cli_read.py  test_gmail_read.py
wolper_google/: __init__.py  auth.py  calendar.py  gmail.py  http.py  main.py
