[project]
name = "google"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest",
]

[project.scripts]
wolper-google = "wolper_google.main:cli"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
